tests/baselines/reference/ComputedPropertyName17.errors.txt
tests/cases/conformance/es6/computedPropertyNames/ComputedPropertyName17.ts(1,15): error TS1003: Identifier expected.
tests/cases/conformance/es6/computedPropertyNames/ComputedPropertyName17.ts(1,22): error TS1005: ',' expected.
tests/cases/conformance/es6/computedPropertyNames/ComputedPropertyName17.ts(1,26): error TS1128: Declaration or statement expected.
tests/cases/conformance/es6/computedPropertyNames/ComputedPropertyName17.ts(1,16): error TS2304: Cannot find name 'e'.


==== tests/cases/conformance/es6/computedPropertyNames/ComputedPropertyName17.ts (4 errors) ====
    var v = { set [e](v) { } }
                  ~
!!! error TS1003: Identifier expected.
                         ~
!!! error TS1005: ',' expected.
                             ~
!!! error TS1128: Declaration or statement expected.
                   ~
!!! error TS2304: Cannot find name 'e'.